--- a/creepy/plugins/flickr/flickr.conf
+++ b/creepy/plugins/flickr/flickr.conf
@@ -1,9 +1,9 @@
 [string_options]
-hidden_access_token_secret =
+hidden_access_token_secret = 
 hidden_api_secret = af264d91d6b86ed3
 hidden_api_key = d42d9307a0ee4d9f81962e651defef4f
-hidden_access_token =
-infowindow_html = <div><div><h3>Retrieved from @PLUGIN@ </h3></div><div><p>Link to the original photo: @LINK@ <p><p>It was taken on : @DATE@ <p></div></div>
+hidden_access_token = 
+infowindow_html = <div><div><h3>Retrieved from @PLUGIN@ </h3></div><div><p>From user: @USERNAME@ </p><p>Link to the original photo: <a href=\"@LINK@\">@LINK@</a> <p><p>It was taken on : @DATE@ <p></div><div><img src=@MEDIA_URL@ /></div></div>
 
 [boolean_options]
 
