--- a/creepy/plugins/instagram/instagram.conf
+++ b/creepy/plugins/instagram/instagram.conf
@@ -1,9 +1,9 @@
 [string_options]
 hidden_client_secret = aad972efd8454fa5b6ff57405ea3f285
 redirect_uri = http://www.geocreepy.com/get_token.html
-hidden_access_token =
+hidden_access_token = 
 hidden_client_id = 05f8e4eb06664006a839f0dd49a50969
-infowindow_html = <div><div><h3>Retrieved from @PLUGIN@ </h3></div><div><p>Caption was : @TEXT@ <p><p>Link to the original image : @LINK@ <p><p>It was taken on : @DATE@ <p></div></div>
+infowindow_html = <div><div><p>From user: @USERNAME@ </p><p>Caption was : @TEXT@ </p><p>Link to the original image : <a href=\"@LINK@\">@LINK@</a> </p><p>It was taken on : @DATE@ </p></div><div><img src=@MEDIA_URL@ /></div></div>
 
 
 [boolean_options]
