--- a/creepy/plugins/googleplus/googleplus.conf
+++ b/creepy/plugins/googleplus/googleplus.conf
@@ -1,8 +1,8 @@
 [string_options]
 hidden_application_secret = TIijw9uvse3AN0xP9lEyvmzc
 hidden_application_clientid = 998273065000-ck3kbbm7tk2007oc4uavbjieqh67o90i.apps.googleusercontent.com
-hidden_credentials = ""
-infowindow_html = <div><div><h3>Retrieved from @PLUGIN@ </h3></div><div><p>Post was : @TEXT@ <p><p>It was sent on : @DATE@ <p></div></div>
+hidden_credentials =
+infowindow_html = <div><div><h3>Retrieved from @PLUGIN@ </h3></div><div><p>From user: @USERNAME@ </p><p>Post was : @TEXT@ <p><p>It was sent on : @DATE@ <p></div></div>
 
 
 #Options to be used in runtime for location search 
