--- a/creepy/plugins/twitter/twitter.conf
+++ b/creepy/plugins/twitter/twitter.conf
@@ -1,9 +1,9 @@
 [string_options]
 hidden_access_token_secret = 
-hidden_application_secret = sX1TWFHT7xsUXpNVPZZgqasaC4OFjdFpI4s5KH8GI
-hidden_access_token =
+infowindow_html = <div><div><p>From user: @USERNAME@ </p><p>The original tweet was: <a href=\"@LINK@\">@LINK@</a></p><p>Tweet text was : @TEXT@ </p><p>It was sent on : @DATE@ </p></div></div>
+hidden_access_token = 
 hidden_application_key = B6DTlnTBKROLI6bQlGurSw
-infowindow_html = <div><div><h3>Retrieved from @PLUGIN@ </h3></div><div><p>Tweet was : @TEXT@ <p><p>It was sent on : @DATE@ <p></div></div>
+hidden_application_secret = sX1TWFHT7xsUXpNVPZZgqasaC4OFjdFpI4s5KH8GI
 
 [boolean_options]
 exclude_geo_disabled = False
